--- a/31009_Project.ipynb
+++ b/31009_Project.ipynb
@@ -39,7 +39,8 @@
         "from tensorflow.keras.utils import load_img, img_to_array\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, BatchNormalization, Dropout\n",
-        "from tensorflow.keras.optimizers import RMSprop, Adam"
+        "from tensorflow.keras.optimizers import RMSprop, Adam\n",
+        "from tensorflow.keras.metrics import AUC, Precision, Recall, F1Score
       ]
     },
     {
@@ -695,9 +696,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Failed to load image: /content/Tiger/.DS_Store\n",
-            "Failed to load image: /content/Ragdoll/.DS_Store\n",
-            "Failed to load image: /content/Persian/.DS_Store\n"
           ]
         }
       ],
@@ -1001,7 +999,7 @@
         "#using the RMSprop optimization algorithm is preferable to stochastic \n",
         "#gradient descent (SGD), because RMSprop automates learning-rate tuning for us. \n",
         "model.compile(optimizer = RMSprop(learning_rate=1e-4),\n",
-        "              loss = 'categorical_crossentropy',metrics=['accuracy'])"
+        "              loss = 'categorical_crossentropy',metrics=['accuracy', AUC(), Precision(), Recall()])"
       ]
     },
     {
@@ -1696,7 +1694,7 @@
         "\n",
         "model2.compile(loss = 'categorical_crossentropy',\n",
         "                    optimizer = 'adam',\n",
-        "                    metrics =['accuracy'])"
+        "                    metrics =['accuracy', AUC(), Precision(), Recall()])"
       ]
     },
     {
